--- a/.github/workflows/check-vulnerabilities-master.yml
+++ b/.github/workflows/check-vulnerabilities-master.yml
@@ -52,7 +52,15 @@ jobs:
 
       # Step 6: Scan the ckan-base image using Docker Scout
       - name: Scan ckan-base with Docker Scout
-        run: docker scout cves ckan/ckan-base:master
+        id: docker-scout
+        uses: docker/scout-action@v1
+        with:
+          command: cves
+          image: ${{ steps.meta.outputs.tags }}
+          only-severities: critical,high
+          write-comment: true
+          #github-token: ${{ secrets.GITHUB_TOKEN }} # to be able to write the comment
+          exit-code: true
 
       # Step 7: Scan the ckan-dev image using Docker Scout
       - name: Scan ckan-dev with Docker Scout
