--- a/.github/workflows/check-vulnerabilities-master.yml
+++ b/.github/workflows/check-vulnerabilities-master.yml
@@ -51,17 +51,25 @@ jobs:
             com.docker-scout.vcs-ref=${{ github.sha }}
 
       # Step 6: Scan the ckan-base image using Docker Scout
-      - name: Scan ckan-base with Docker Scout BJ
-        id: docker-scout
+      - name: Scan ckan-base with Docker Scout
+        id: docker-scout-base
         uses: docker/scout-action@v1
         with:
           command: cves
-          image: ${{ steps.meta.outputs.tags }}
+          image: ckan/ckan-base:master
           only-severities: critical,high
           write-comment: true
-          #github-token: ${{ secrets.GITHUB_TOKEN }} # to be able to write the comment
-          exit-code: true
+          github-token: ${{ secrets.GITHUB_TOKEN }} # to be able to write the comment
+          exit-code: '1'
 
       # Step 7: Scan the ckan-dev image using Docker Scout
-      #- name: Scan ckan-dev with Docker Scout
-      #  run: docker scout cves ckan/ckan-dev:master
+      - name: Scan ckan-base with Docker Scout
+        id: docker-scout-dev
+        uses: docker/scout-action@v1
+        with:
+          command: cves
+          image: ckan/ckan-dev:master
+          only-severities: critical,high
+          write-comment: true
+          github-token: ${{ secrets.GITHUB_TOKEN }} # to be able to write the comment
+          exit-code: '1'
