--- a/.github/workflows/check-vulnerabilities-master.yml
+++ b/.github/workflows/check-vulnerabilities-master.yml
@@ -60,7 +60,7 @@ jobs:
           only-severities: critical,high
           write-comment: true
           github-token: ${{ secrets.GITHUB_TOKEN }} # to be able to write the comment
-          #exit-code: '1'
+          exit-code: '0'
 
       # Step 7: Scan the ckan-dev image using Docker Scout
       - name: Scan ckan-dev with Docker Scout
@@ -72,4 +72,4 @@ jobs:
           only-severities: critical,high
           write-comment: true
           github-token: ${{ secrets.GITHUB_TOKEN }} # to be able to write the comment
-          #exit-code: '1'
+          exit-code: '0'
