--- a/.github/workflows/check-vulnerabilities-master.yml
+++ b/.github/workflows/check-vulnerabilities-master.yml
@@ -22,7 +22,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Step 4: Build the ckan-base image
+      # Step 4: Scan the ckan-base image using Docker Scout
+      - name: Scan ckan-base (remote) with Docker Scout
+        id: docker-scout-base-remote
+        uses: docker/scout-action@v1
+        with:
+          command: cves
+          image: ckan/ckan-base:master
+          only-severities: critical,high
+          write-comment: true
+          github-token: ${{ secrets.GITHUB_TOKEN }} # to be able to write the comment
+          exit-code: '0'
+
+      # Step 5: Build the ckan-base image
       - name: Build ckan-base master
         uses: docker/build-push-action@v6
         with:
@@ -36,7 +48,7 @@ jobs:
           labels: |
             com.docker-scout.vcs-ref=${{ github.sha }}
 
-      # Step 5: Build the ckan-dev image
+      # Step 6: Build the ckan-dev image
       - name: Build ckan-dev master
         uses: docker/build-push-action@v6
         with:
@@ -50,9 +62,9 @@ jobs:
           labels: |
             com.docker-scout.vcs-ref=${{ github.sha }}
 
-      # Step 6: Scan the ckan-base image using Docker Scout
-      - name: Scan ckan-base with Docker Scout
-        id: docker-scout-base
+      # Step 7: Scan the ckan-base image using Docker Scout
+      - name: Scan ckan-base (local) with Docker Scout
+        id: docker-scout-base-local
         uses: docker/scout-action@v1
         with:
           command: cves
@@ -62,7 +74,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }} # to be able to write the comment
           exit-code: '0'
 
-      # Step 7: Scan the ckan-dev image using Docker Scout
+      # Step 8: Scan the ckan-dev image using Docker Scout
       - name: Scan ckan-dev with Docker Scout
         id: docker-scout-dev
         uses: docker/scout-action@v1
