--- a/.github/workflows/check-vulnerabilities-master.yml
+++ b/.github/workflows/check-vulnerabilities-master.yml
@@ -1,7 +1,7 @@
 name: Check the vulnerbilities of the master image using Docker Scout
 on:
   schedule:
-    - cron: '1,11,21,31,41,51 10,11,12,13,14,15,16,17,18,19 * * *' # Run every 10 mins, business hours
+    - cron: '1,31, 10,11,12,13,14,15 * * *' # Run every 30 mins, business hours
 
 jobs:
   docker-scout-scan:
